# struc

./: pyproject.toml  pytest.ini  requirements.txt  setup.py
struc/: CacheOnes.py  Dynamic.py  Serializable.py  __init__.py  defs.py  register.py  struc.py
struc2/: Dynamic.py  Registry.py  Serialized.py  SerializedImpl.py  Struct.py  TagParser.py  __init__.py  defs.py
tests/: test_Struct.py  test_struc2.py
